syntax = "proto3";

package user;

service UsersService {
  rpc InsertUser(UserId) returns (UserId) {}
}

message UserId {
  string message = 1;
}