syntax = "proto3";

package user;

service UsersService {
  rpc InsertUser(User) returns (UserResponse) {}
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string companyName = 4;
  string email = 5;
  string password = 6;
}

message UserResponse {
  User payload = 1;
}

